SFQBD/Ebiz/force-app/main/default/objects/OrderItem/fields/EBizCharge_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_Order_ID__c</fullName>
    <label>EBizCharge Order ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>