SFQBD/Ebiz/force-app/main/default/objects/OrderItem/fields/EBizCharge_OrderItem_ID__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_OrderItem_ID__c</fullName>
    <label>EBizCharge OrderItem ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>