SFQBD/Ebiz/force-app/main/default/objects/OrderItem/fields/EBizCharge_OrderItem_Name__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_OrderItem_Name__c</fullName>
    <label>EBizCharge OrderItem Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>