SFQBD/Ebiz/force-app/main/default/objects/OrderItem/fields/EBizCharge_Unit_Of_Measure__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_Unit_Of_Measure__c</fullName>
    <label>EBizCharge Unit Of Measure</label>
    <length>10</length>
    <type>Text</type>
</CustomField>